--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,12 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+.space {
+  height: 200px;
+  width: 200px;
+  background: #666;
+  border: 2px solid black;
+
+}
+.space:hover {
+  background: blue;
+}
