--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,28 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+// Uiversial styles
+body {
+  background: #7dbced;
+  margin: none;
+  padding: none;
+}
+.hidden {
+  display: none;
+}
+// Login form
+#login-container {
+
+  margin: auto;
+  width: 50%;
+}
+
+// Game Board
+.board-container {
+display: flex;
+align-content: center;
+justify-content: center;
+}
+
 .space {
   height: 200px;
   width: 200px;
@@ -8,5 +31,12 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 }
 .space:hover {
-  background: blue;
+  background: black;
+}
+
+.piece {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  color: #7dbced;
 }
