--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -11,18 +11,23 @@ body {
 }
 // Login form
 #login-container {
-
+  display: flex;
+  align-content: center;
+  justify-content: center;
   margin: auto;
-  width: 50%;
+  width: 100%;
+  height: 100%;
 }
-
+#display {
+  margin: auto;
+  width: 80%;
+}
 // Game Board
 .board-container {
 display: flex;
 align-content: center;
 justify-content: center;
 }
-
 .space {
   height: 200px;
   width: 200px;
@@ -39,4 +44,14 @@ justify-content: center;
   align-content: center;
   justify-content: center;
   color: #7dbced;
+}
+#row-top {
+  border-top: 0;
+}
+
+.row:first-child {
+  border-left: 0;
+}
+row:last-child {
+  borer-right: none
 }
